added hat